2007-11-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-element-factory.c: supported long_name.
	* test/test_element_factory.rb: added a test for long_name.

2007-11-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-message.c: supported parsing message API.
	* test/test_message.rb: added tests for parsing message.

	* src/rbgst-message.c: supported new message API.
	* test/test_message.rb: added tests for new message.

	* src/rbgst-structure.c, src/rbgst.h: cleanup.
	* src/rbgstcaps.c, src/rbgsttagsetter.c: followed the above changes.

	* src/rbgst-message.c: supported structure API.
	* test/test_message.rb: added tests for structure.

	* src/rbgst-message.c: supported source API.
	* test/test_message.rb: added tests for source.

	* src/rbgst-message.c: supported timestamp API.
	* test/test_message.rb: added tests for timestamp.

	* src/rbgst-message.c: supported thread API.
	* test/test_message.rb: added tests for thread.

	* src/rbgst-message.c: supported Gst::Message.new.
	* test/test_message.rb: added tests for initialization.

	* src/rbgst-mini-object.c, test/test_mini_object.rb: make_writable
	-> writable!.

	* src/rbgst-buffer.c: implemented span API.
	* test/test_buffer.rb: added tests for span.

	* src/rbgst-mini-object.c: supported dynamically name resolving.

	* src/rbgst-buffer.c: implemented metatdata_writable API.
	* test/test_buffer.rb: added tests for metadata_writable.

	* src/rbgst-buffer.c: implemented copy_metatdata API.
	* test/test_buffer.rb: added tests for copy_metadata.

	* src/rbgst-buffer.c: implemented GstBufferCopyFlags API.
	* test/test_buffer.rb: added tests for GstBufferCopyFlags.

	* src/rbgst-buffer.c: implemented disconitnuity API.
	* test/test_buffer.rb: added tests for disconitnuity.

	* src/rbgst-buffer.c: implemented offset_end API.
	* test/test_buffer.rb: added tests for offset_end.

	* src/rbgst-buffer.c: implemented offset API.
	* test/test_buffer.rb: added tests for offset.
