@@ -1,5 +1,8 @@
 2007-11-11  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbgst-index-factory.c: supported find and description.
+	* test/test_index_factory.rb: added a test for find and description.
+
 	* src/rbgst-element-factory.c: supported long_name.
 	* test/test_element_factory.rb: added a test for long_name.
 
